tests/ui/macros/issue-30007.stderr
error: macro expansion ignores `;` and any tokens following
  --> $DIR/issue-30007.rs:2:20
   |
LL |     () => ( String ; );
   |                    ^
...
LL |     let i: Vec<t!()>;
   |                ---- caused by the macro expansion here
   |
   = note: the usage of `t!` is likely invalid in type context

error: aborting due to 1 previous error

