tests/ui/macros/issue-30007.rs
macro_rules! t {
    () => ( String ; );     //~ ERROR macro expansion ignores `;`
}

fn main() {
    let i: Vec<t!()>;
}
